# cas-ml-fs-2025-GitHub

./: .gitattributes  LICENSE  README.md
01 - INTRODUCTION/: README.md
01 - INTRODUCTION/00_content/: content_python_intro.pptx
01 - INTRODUCTION/01_setup/: 01_anaconda.md
01 - INTRODUCTION/02_projects/: 02_projects.md  create_groups.ipynb  style.css  teilnehmer.csv
01 - INTRODUCTION/03_basics/: 03_python_basics.ipynb  03_python_basics_quizz.ipynb
01 - INTRODUCTION/04_pandas/: 03_pandas_quizz.ipynb  04_pandas.ipynb  nachnamen_small.csv
01 - INTRODUCTION/05_plotting/: 05_plot.ipynb  05_plot_quizz.ipynb  gemeindeportraits.csv
02 - SUPERVISED-ML/: README.md  Titanic_Project.ipynb
03 - DEEP-LEARNING/: SVHN_Uebung.ipynb
04 - COMPUTER-VISION/: README.md
05 - GENERATIVE-AI/: conv_variational_autoencoder_Colab_version.ipynb  deep_conv_generative_adversarial_network_Colab_version.ipynb  diffusion_links_Colab.md  diffusion_models_from_scratch_2.ipynb
06 - NATURAL-LANGUAGE-PROCESSING/: README.md
06 - NATURAL-LANGUAGE-PROCESSING/code/: detect_fake_news.ipynb  pyproject.toml
07 - UNSUPERVISED-LEARNING/: README.md  lego_dataset_cont_feature.csv
08 - TRANSFORMERS/: README.md
09 - PHYSICAL-INFORMED-NEURAL-NETWORKS/: README.md
10 - KERAS INTRODUCTION/: writing_a_training_loop_from_scratch.ipynb
11 - REINFORCEMENT LEARNING/: Deep_RL_Atari_AZ.ipynb  Deep_RL_FrozenLake_Taxi_AZ.ipynb
12 - MLOPS/: index.html
13 - TIMESERIES/: README.MD
99 - COMMUNICATION/: README.md
_Codevorlagen/: Modulimport_voll.ipynb  gitbash-Commands.txt  zip-Import.ipynb
(+120 files in other folders)
