[tool.poetry]
name = "nlp challenge"
version = "0.1.0"
description = ""
authors = ["Mark Rowan <mark@tamias.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
nltk = "^3.8.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
